force-app/main/default/objects/ContinuingEducation__c/ContinuingEducation__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <label>Continuing Education</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Continuing Education Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Continuing Education</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>