force-app/main/default/objects/ContinuingEducation__c/fields/ContinuingEducation__c.field-meta.xml
<CustomField>
    <fullName>ContinuingEducation__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <label>Continuing Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>