force-app/main/default/objects/ContinuingEducation__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>