force-app/main/default/objects/ContinuingEducation__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <label>Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>