force-app/main/default/objects/ContinuingEducation__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Continuing Education</relationshipLabel>
    <relationshipName>Continuing_Education1</relationshipName>
    <type>Lookup</type>
</CustomField>